# MikRomInjectDemo

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mik/mikrominjectdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mik/mikrominjectdemo/: MainActivity.java
app/src/main/jni/: main.cpp  main.h
app/src/main/jni/dlfc/: dlfcn_compat.cpp  dlfcn_nougat.cpp  dlfcn_nougat.h
app/src/main/jni/utils/: FileUtils.cpp  FileUtils.h  HookUtils.cpp  HookUtils.h  Log.h  RegisterNativeUtils.cpp  RegisterNativeUtils.h  hide.cpp  hide.h  logging.h  parse.cpp  parse.h  wrap.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mik/mikrominjectdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
